fix: add letter-spacing in main-menu

--- a/blocks/form/__submit-btn/form__submit-btn.css
+++ b/blocks/form/__submit-btn/form__submit-btn.css
@@ -6,6 +6,7 @@
   font-weight: normal;
   font-size: 72px;
   line-height: 1;
+  letter-spacing: 2px;
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
