--- a/blocks/main-menu/__link/main-menu__link.css
+++ b/blocks/main-menu/__link/main-menu__link.css
@@ -5,6 +5,7 @@
   font-size: 24px;
   line-height: 1;
   text-align: center;
+  letter-spacing: 1px;
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
